# teleopti-wfm-script

./: .gitignore  CHANGELOG.md  CHROMEDRIVER_SETUP.md  CLEANUP.md  DUPLICATE_LOGIC.md  EXCEL_EXPORT_IMPROVEMENTS.md  INSTRUCTIONS_FOR_ANALYSIS.md  POSTPROCESSING.md  PYTHON_DETECTION.md  QUICK_START_NEW_SITE.md  README.md  README_BATCH.md  README_NEW_FEATURES.md  README_NEW_SITE_SCRIPT.md  README_REFACTORING.md  analyze_page.py  browser_console_analyzer.js  browser_console_analyzer_advanced.js  browser_console_commands.js  browser_console_iframe_analyzer.js  debug_run.bat  diagnose_form.js  example_data.xlsx  main.py  mass_problem.txt  new_site_report.py  normalization.txt  notes.txt  pivot.txt  pyproject.toml  quick_report.py  quick_run.bat  region_skills.yml  requirements.txt  run.bat  run_script.bat  run_unc.bat  setup.bat  skills.txt  test_auto_date_processing.py  (+8 more)
analysis/: page_structure_analysis_20250825_170026.html
modules/: __init__.py  cleanup_manager.py  data_processing.py  date_time_utils.py  download_manager.py  excel_exporter.py  excel_manager.py  form_elements.py  form_filler.py  iframe_handler.py  new_site_handler.py  page_analyzer.py  post_processor.py  regions.py  selenium_export_handler.py  selenium_helpers.py  skills.py
